# jarvis

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  config.example.toml
.cargo/: config.toml
doctrines/favorites/: SPEC.md
doctrines/favorites/examples/auction24/: INTEGRATION.md
doctrines/favorites/registry/: favorites.json
doctrines/favorites/src/: component-contract.ts  schema.sql  signal.ts
doctrines/favorites/verify/: registry_validate.py  shadcn-registry-item.schema.json  signal_check.ts  value_function_check.py
src/: config.rs  converse.rs  improve.rs  kill.rs  main.rs  nudge.rs  patterns.rs  run.rs  runbook.rs  screen.rs  sms.rs  status.rs  tasks.rs  telegram.rs  units.rs  util.rs  wm.rs  x11util.rs
src/capture/: dedup.rs  mod.rs  x11.rs
src/digest/: build.rs  mod.rs  render.rs
src/listen/: audio.rs  mod.rs  realtime.rs  scribe.rs  stt.rs  vad.rs
src/mail/: sendgrid.rs
src/meet/: audio.rs  browser.rs  mod.rs
src/memory/: consolidate.rs  embed.rs  mod.rs  vector.rs
src/pipeline/: analyze.rs  claude.rs  mod.rs  segment.rs  select.rs
src/speak/: mod.rs  piper.rs  tts.rs
src/store/: db.rs  retention.rs
templates/: email.html
